--- a/Green_S9_Group_project/package.json
+++ b/Green_S9_Group_project/package.json
@@ -14,7 +14,6 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.1401.3",
-
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -27,9 +26,12 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/preferences": "^4.0.1",
-
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "2.8.5",
@@ -55,7 +57,6 @@
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "^3.7.0",
-
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
