--- a/Green_S9_Group_project/package.json
+++ b/Green_S9_Group_project/package.json
@@ -14,7 +14,6 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.1401.3",
-
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -27,7 +26,6 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/preferences": "^4.0.1",
-
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -40,7 +38,7 @@
     "lodash-es": "^4.17.21",
     "mongoose-unique-validator": "^3.1.0",
     "mysql": "2.18.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -55,10 +53,6 @@
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "^3.7.0",
-<<<<<<< HEAD
-=======
-
->>>>>>> origin/master
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
