--- a/Green_S9_Group_project/.eslintrc.json
+++ b/Green_S9_Group_project/.eslintrc.json
@@ -5,7 +5,7 @@
     {
       "files": ["*.ts"],
       "parserOptions": {
-        "project": ["tsconfig.json", "e2e/tsconfig.json"],
+        "project": ["GROUP_S9_GO-GREEN/tsconfig.json", "e2e/tsconfig.json"],
         "createDefaultProgram": true
       },
       "extends": [
