--- a/Green_S9_Group_project/package.json
+++ b/Green_S9_Group_project/package.json
@@ -42,6 +42,7 @@
     "lodash-es": "^4.17.21",
     "mongoose-unique-validator": "^3.1.0",
     "mysql": "2.18.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
